# FumeTune

./: .env.example  .gitignore  Makefile  README.md  bot.py  config.example.json  config.example.py  fumetune.py  launcher.py  pyproject.toml  requirements.txt
cogs/: __core__.py  __dev__.py  __error__.py  __eval__.py  __ipc__.py  __topgg__.py  filters.py  general.py  help.py  music.py  utility.py
lavalink/: application.example.yml
utils/: cd.py  checks.py  cogs.py  config.py  db.py  helpers.py  modals.py  paginators.py  player.py  selects.py  tools.py  views.py
