[project]
name = "FumeTune"
version = "1.0.0"
description = "Unlock the ultimate music experience for YOUR Discord community with FumeTune!"
license = "AGPL-3.0"
authors = [
    { name="Sayan Bhattacharyya", email="sayan@sn1f3rt.dev" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiomysql>=0.2.0",
    "better-ipc",
    "click>=8.1.7",
    "discord-ext-menus",
    "discord-ext-menus-views",
    "discord-py[speed,voice]>=2.4.0",
    "lyricsgenius",
    "topggpy>=1.4.0",
    "wavelink>=3.4.1",
]

[project.optional-dependencies]
speed = [
    "uvloop>=0.21.0",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.3",
]

[tool.uv.sources]
better-ipc = { git = "https://github.com/MiroslavRosenov/better-ipc", rev = "efb145d9dabc0a90e4c6e32be08bd03ae4257249" }
discord-ext-menus = { git = "https://github.com/Rapptz/discord-ext-menus" }
discord-ext-menus-views = { git = "https://github.com/FumeStop/discord-ext-menus-views" }
lyricsgenius = { git = "https://github.com/ItsJustAGitHubMichealWhosGonnaSeeIt5Ppl/LyricsGenius", rev = "ItsJustAGitHubMichealWhosGonnaSeeIt5Ppl/issue287" }

[tool.ruff]
line-length = 85
target-version = "py312"

[tool.ruff.lint.isort]
section-order = ["future", "typing", "standard-library", "third-party", "first-party", "local-folder", "config"]
force-wrap-aliases = true
combine-as-imports = true
length-sort = true

[tool.ruff.lint.isort.sections]
"typing" = ["typing"]
"config" = ["config"]
