[project]
name = "FumeTune"
version = "1.0.0"
description = "Unlock the ultimate music experience for YOUR Discord community with FumeTune!"
license = "AGPL-3.0"
authors = [
    { name="Sayan Bhattacharyya", email="sayan@sn1f3rt.dev" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql==0.3.2",
    "better-ipc",
    "click==8.4.1",
    "discord-ext-menus",
    "discord-ext-menus-views",
    "discord-py[speed]==2.7.1",
    "lyricsgenius==3.12.2",
    "topggpy==1.4.0",
    "wavelink==3.5.2",
]

[project.optional-dependencies]
speed = [
    "uvloop==0.22.1",
]

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "ruff==0.15.15",
]

[tool.uv.sources]
better-ipc = { git = "https://github.com/MiroslavRosenov/better-ipc", rev = "efb145d9dabc0a90e4c6e32be08bd03ae4257249" }
discord-ext-menus = { git = "https://github.com/Rapptz/discord-ext-menus" }
discord-ext-menus-views = { git = "https://github.com/FumeStop/discord-ext-menus-views" }

[tool.ruff]
line-length = 85
target-version = "py312"

[tool.ruff.lint.isort]
section-order = ["future", "typing", "standard-library", "third-party", "discord", "first-party", "local-folder", "config"]
force-wrap-aliases = true
combine-as-imports = true
length-sort = true

[tool.ruff.lint.isort.sections]
"config" = ["config"]
"discord" = ["discord"]
"typing" = ["typing"]
